--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_svg: ^2.0.5
   fpdart: ^0.5.0
   appwrite: ^9.0.0
+  image_picker: ^0.8.8
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
